fix pom.xm issue